k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sanjay-portfolio-ingress
  namespace: portfolio
  labels:
    app.kubernetes.io/name: sanjay-portfolio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sanjay-portfolio-service
                port:
                  number: 80
